[gd_scene load_steps=10 format=3 uid="uid://cplgkoulflxk7"]

[ext_resource type="Script" uid="uid://di8hfp3ow8x3o" path="res://level.gd" id="1_f2txt"]
[ext_resource type="PackedScene" uid="uid://0brfraedrmwj" path="res://hud.tscn" id="1_oi3di"]
[ext_resource type="Texture2D" uid="uid://d4h08mvfhwjpb" path="res://texture/divider.png" id="1_u52ul"]
[ext_resource type="PackedScene" uid="uid://drcjcavxsvlae" path="res://player_bar.tscn" id="2_vonw3"]
[ext_resource type="PackedScene" uid="uid://dvr0aje1vi848" path="res://ball.tscn" id="4_0b4ue"]
[ext_resource type="AudioStream" uid="uid://b6k00qewjig03" path="res://music/336935__the-sacha-rush__coin6.wav" id="6_1ainy"]
[ext_resource type="PackedScene" uid="uid://cx2cxap8sldwk" path="res://wall.tscn" id="7_n6hdu"]
[ext_resource type="PackedScene" uid="uid://bfc1t4aahimuy" path="res://game_end_hud.tscn" id="8_km5ld"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2txt"]
size = Vector2(5, 664)

[node name="Level" type="Node"]
script = ExtResource("1_f2txt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -337.5
offset_right = 600.0
offset_bottom = 337.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Divider" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(600, 337.5)
scale = Vector2(0.687493, 1.36722)
texture = ExtResource("1_u52ul")
region_enabled = true
region_rect = Rect2(1, 1, 8, 460)

[node name="Player1Bar" parent="." instance=ExtResource("2_vonw3")]
position = Vector2(64, 350)
scale = Vector2(0.77, 0.77)
up_input = "player1_up"
down_input = "player1_down"

[node name="Player2Bar" parent="." instance=ExtResource("2_vonw3")]
position = Vector2(1136, 350)
scale = Vector2(0.77, 0.77)

[node name="Ball" parent="." instance=ExtResource("4_0b4ue")]
position = Vector2(600, 337.5)

[node name="GoalLeft" type="Area2D" parent="."]
position = Vector2(4, 337)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_f2txt")

[node name="GoalRight" type="Area2D" parent="."]
position = Vector2(1197, 337)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
shape = SubResource("RectangleShape2D_f2txt")

[node name="GoalCelebration" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1ainy")
bus = &"SFX"

[node name="TopWall" parent="." instance=ExtResource("7_n6hdu")]
position = Vector2(600, 0)

[node name="Wall" parent="." instance=ExtResource("7_n6hdu")]
position = Vector2(600, 675)

[node name="HUD" parent="." instance=ExtResource("1_oi3di")]

[node name="GameEndHUD" parent="." instance=ExtResource("8_km5ld")]

[connection signal="body_entered" from="GoalLeft" to="." method="_on_goal_area_entered"]
[connection signal="body_entered" from="GoalRight" to="." method="_on_goal_area_entered"]
[connection signal="replay" from="GameEndHUD" to="." method="_on_game_end_hud_replay"]
